Modified index.html by introducing sidebar contents

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div id="sidebar">
-        
+        <ul id="pages">
+            <a href="#"><li>Causes</li></a>
+            <a href="#"><li>Risk Factors</li></a>
+            <a href="#"><li>Preventions</li></a>
+            <a href="#"><li>Fertility Tests</li></a>
+            <a href="#"><li>When to consult a specialist?</li></a>
+            <a href="#"><li>Treatments</li></a>
+            <a href="#"><li>Reproductive Technologies</li></a>
+        </ul>
     </div>
 </body>
 </html>
