--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
             <a href="#"><li>Reproductive Technologies</li></a>
         </ul>
     </div>
+
+    <script src="node_modules/d3/dist/d3.min.js"></script>
 </body>
 </html>
